--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                     <li class="nav-item"><a class="nav-link" href="#about">about</a></li>
                     <li class="nav-item"><a class="nav-link" href="#projects">A.I</a></li>
                     <li class="nav-item"><a class="nav-link" href="#signup">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="privacypolicy.html">Privacy policy</a></li>
                 </ul>
             </div>
         </div>
